tests/sumo/errors/routes/false_route2/errors.sumo
Error: Attribute 'route' in definition of vehicle '0' is empty.
Quitting (on error).
